# EECS452-Audio-Spatialization

./: .gitignore  Basic_Stereo_Seperation.py  INSTALL.txt  OVERVIEW.txt  USAGE.txt
Arduino_Spatialization/Spatial_Sketch/: Audio_Output.pde  FIR_lab3.ino  Globals.pde  Spatial_Sketch.pde  adpcm_decode.h  band_pass.h  low_pass.h
ble_periodic_adv_with_cte/: CMakeLists.txt
ble_periodic_adv_with_cte/main/: main.c
receiver_tag/: CMakeLists.txt
receiver_tag/main/: CMakeLists.txt  ble_reception.c  ble_reception.h  main.c
spatialization_tag/: adpcm_decode.h  band_pass.h  spatialization_algorithim.pde
transmitter_tag/: CMakeLists.txt  README.md
transmitter_tag/main/: CMakeLists.txt  adpcm.h  aoa_ble.c  aoa_ble.h  ble_transmission.c  ble_transmission.h  common.h  i2s_sampling.c  i2s_sampling.h  lc3_encoder.c  lc3_encoder.h  main.c
